<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/mainActivityWifiNameEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/enter_wifi_network_edittext"
        android:textSize="14sp"
        android:layout_marginTop="100dp"
        android:enabled="false"/>

    <Button
        android:id="@+id/mainActivityConfirmWifiNetworkButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityWifiNameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/mainActivityButtonChoose"
        android:layout_marginTop="30dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:text="@string/confirm_network_button"
        android:textAllCaps="false"
        android:enabled="false"/>

    <Button
        android:id="@+id/mainActivityButtonChoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityConfirmWifiNetworkButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="50dp"
        android:text="@string/turn_on_off_wifi_button"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/mainActivityButtonTurnOnService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityButtonChoose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="30dp"
        android:text="@string/turn_on_service_button"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/mainActivityButtonTurnOffService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityButtonTurnOnService"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="30dp"
        android:text="@string/turn_off_service_button"
        android:textAllCaps="false"
        android:enabled="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>

